feat: Table, Column 클래스 작성